vertical alignment fix for radioboxes in ticket survey

--- a/app/assets/stylesheets/grenadine/theme.css.scss
+++ b/app/assets/stylesheets/grenadine/theme.css.scss
@@ -1276,3 +1276,6 @@ label.inline-checkbox {
 .centered {
     text-align: center;
 }
+#order-form div.form-group  label {
+    padding-top: 6px;
+}
